# STPPGC

./: .gitignore  NOTICE  README.md  README_old.md  example.py  pyproject.toml  requirements.txt  setup.py
HPO/: hpo_base.py  ray_hpo.py
conf/: config.yaml
conf/data/: pinwheel.yaml
conf/hpo/: default.yaml
conf/logging/: default.yaml
conf/model/: autostpp.yaml  deepstpp.yaml  diffstpp.yaml  neuralstpp.yaml  smash.yaml
conf/trainer/: default.yaml
config_factory/: base.py  data_config.py  hypertuning_config.py  logger_config.py  model_config.py  runner_config.py  trainer_config.py
configs/: config.yaml
data/: base.py  datamodule.py  datasets.py  mhp.py  neuralstpp_dm.py
datasets/: datamodule.py
docs/: callbacks.md  config_factory.md
experiments/648658574419909846/: meta.yaml
experiments/648658574419909846/2cb5a21c0d304ea780a2b490372a7606/: meta.yaml
experiments/648658574419909846/2cb5a21c0d304ea780a2b490372a7606/checkpoints/: epoch=9-step=250.ckpt
experiments/648658574419909846/2cb5a21c0d304ea780a2b490372a7606/metrics/: epoch  train_loss_epoch  train_loss_step  val_loss
experiments/648658574419909846/2cb5a21c0d304ea780a2b490372a7606/params/config/: model_id
models/: base.py  dummy_stpp.py
quick_starter/: benchmark.py  hpo.py  runner.py
quick_starter/configs/: benchmark.yaml  config.yaml  ray_config.yaml
ray_results/PinwheelHawkesSweep/: ray_tune_trials.csv
run_examples/: example.py  hpo_example.py  runner_example.py
run_examples/configs/: config.yaml  ray_config.yaml
runner/: runner_base.py  stpp_runner.py
scripts/: cli.py
src/lightning_stpp/: __init__.py
src/lightning_stpp/HPO/: __init__.py  hpo_base.py  ray_hpo.py
src/lightning_stpp/callbacks/common/: test_scheduler.py  train_logger.py  validation_scheduler.py
src/lightning_stpp/callbacks/neural_stpp/: ema.py
src/lightning_stpp/config_factory/: __init__.py  _config.py  _parsing.py  aliases.py  benchmark_config.py  data_config.py  hypertuning_config.py  logger_config.py  model_config.py  runner_config.py  trainer_config.py
src/lightning_stpp/data/: __init__.py  autostpp_dm.py  base.py  datamodule.py  datasets.py  deepstpp_dm.py  diffstpp_dm.py  mhp.py  neuralstpp_dm.py  smash_dm.py
src/lightning_stpp/models/: __init__.py  autointstpp.py  autostpp.py  base.py  deepstpp.py  diffstpp.py  neuralstpp.py  smash.py
src/lightning_stpp/runner/: __init__.py  _runner.py  stpp_runner.py
src/lightning_stpp/utils/: data.py  evaluation.py  load_config.py  lr_schedules.py  registrable.py  save.py
tests/: conftest.py
tests/config_factory/: test_config_factory.py  test_config_factory.yaml  test_import_cf.py  test_model_config.py  test_sys_path.py
tests/runner/: test_pl.py  test_runner.py
utils/: load_config.py
venv-312/: pyvenv.cfg
