[build-system]
requires = [
  "setuptools>=68",
  "wheel",
  "Cython>=0.29",
  "numpy"
]
build-backend = "setuptools.build_meta"

[project]
name            = "lightning-stpp"
version         = "0.0.1"
license = { file = "LICENSE" }
description     = "Benchmarks for spatiotemporal point processes"
readme          = "README.md"
requires-python = ">=3.9"
dependencies = [
  "torch>=2.2.0",
  "lightning>=2.2.0",
  "ray[tune]>=2.9.0",
]

[project.optional-dependencies]
neural = [
  "neural_stpp @ git+https://github.com/YahyaAalaila/neural_stpp.git@main#egg=neural_stpp"
]

[tool.setuptools.packages.find]
where   = ["src"]
include = ["lightning_stpp", "lightning_stpp.*"]

# Declare each extension as its own table in an array:
[[tool.setuptools.ext-modules]]
name = "lib.neural_stpp.data_utils_fast"
sources = ["src/lib/neural_stpp/data_utils_fast.pyx"]
include-dirs = [
  "/Users/aalaila/Documents/DFKI/DSA/Projecta/Eventfull/WP2.1.3/GlueCode/GlueCodev5/venv-312/lib/python3.13/site-packages/numpy/_core/include"
]
extra-compile-args = ["-O3"]
