[build-system]
requires = [
  "setuptools>=68",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name            = "lightning-stpp"
version         = "0.0.1"
license = { file = "LICENSE" }
description     = "Benchmarks for spatiotemporal point processes"
readme          = "README.md"
requires-python = ">=3.9"
dependencies = [
  "torch==2.6.0",
  "lightning==2.2.0",
  "ray[tune]==2.9.0",
  "numpy>=2.0.0"
]

[project.optional-dependencies]
neural = [
  "neural_stpp @ git+https://github.com/YahyaAalaila/neural_stpp.git@main#egg=neural_stpp"
]
[tool.setuptools]              #  New
package-dir = {"" = "src"}     #  New

[tool.setuptools.packages.find]
where   = ["src"]
include = ["lightning_stpp", "lightning_stpp.*"]
